# hymnal

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  LICENSE.txt  README.md  compose.yaml  deploy.sh  index.html  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  run.ps1  run.sh  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
generator/: converter.py  type1.html  type2.html  type3.html  types.html
hymnal/: converter.py  main.py
hymnal/ag/: 0001.json  0002.json  0004.json  0005.json  0006.json  0007.json  0010.json  0012.json  0013.json  0014.json  0015.json  0017.json  0018.json  0021.json  0024.json  0025.json  0026.json  0029.json  0032.json  0033.json  0034.json  0035.json  0037.json  0038.json  0039.json  0040.json  0041.json  0042.json  0043.json  0044.json  0046.json  0047.json  0048.json  0049.json  0050.json  0052.json  0053.json  0054.json  0055.json  0057.json  (+885 more)
hymnal/cnv/: 0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0008.json  0009.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json
hymnal/other/: 1632.json  1635.json  1637.json  1639.json  styles
hymnal/templates/: sac.html.j2  sasnc.html.j2  saswc.html.j2
hymnal/yth/: 0001.json  0002.json
scripts/: format.sh  test.ipynb
src/: App.svelte  app.css  app.html  app.postcss  index.test.ts  main.rs  main.ts  populate.rs  sketch.rs  transform.rs  utility.rs
src/hymnal/: html2json.py  json2html.py  main.py  sketch.py
src/jinja/: starts-at-chorus-with-verses.html.j2  (+3 more)
src/lib/: Landing.svelte  (+2 more)
tests/: test.ts
(+2422 files in other folders)
