[project]
name = "hymnal"
version = "0.1.7"
description = "Christian hymnal"
authors = [{ name = "Jovial Joe Jayarson", email = "jovial7joe@hotmail.com" }]
dependencies = ["jinja2>=3.1.2"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "AGPL-3.0-only" }

[project.optional-dependencies]
extra = ["beautifulsoup4>=4.12.2", "lxml>=4.9.3"]

[tool.pdm.dev-dependencies]
dev = ["ipykernel>=6.26.0"]
tooling = ["bandit>=1.7.5", "black>=23.10.1", "ruff>=0.1.4"]
