[project]
name = "hymnal"
version = "0.1.7"
description = "multilingual christian hymnal"
authors = [{ name = "Jovial Joe Jayarson", email = "jovial7joe@hotmail.com" }]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
keywords = ["anthem", "hymnal", "psalm", "songbook", "verse"]
requires-python = ">=3.12"
dependencies = ["jinja2>=3.1.3"]

[project.optional-dependencies]
extra = ["beautifulsoup4>=4.12.3", "lxml>=5.1.0"]

[tool.pdm.dev-dependencies]
dev = ["ipykernel>=6.29.2"]
tooling = ["bandit>=1.7.7", "black>=24.2.0", "ruff>=0.2.1"]
